kubernetes/deployment-cacher.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gnzcacher
spec:
  selector:
    matchLabels:
      app: gnzcacher
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  replicas: 2
  template:
    metadata:
      labels:
        app: gnzcacher
    spec:
      containers:
      - name: gnzcacher
        image: grantnz/gnzcacher:latest
