kubernetes/deployment-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gnzserver
spec:
  selector:
    matchLabels:
      app: gnzserver
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  replicas: 2
  template:
    metadata:
      labels:
        app: gnzserver
    spec:
      containers:
      - name: gnzserver
        image: grantnz/gnzserver:latest
