kubernetes/service-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: gnzserver-service
spec:
  type: NodePort
  selector:
    app: gnzserver
  ports:
    - name: gnzserver-service
      port: 80
      targetPort: 8080
